src/Grammar/Objective_JSParser.py
# Generated from Objective_JS.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class Objective_JSParser ( Parser ):

    grammarFileName = "Objective_JS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'elsif'", "'do'", "'times'", 
                     "'while'", "'++'", "'--'", "'*'", "'/'", "'%'", "'^'", 
                     "'=='", "'='", "'+'", "'-'", "'!='", "'>'", "'>='", 
                     "'<'", "'<='", "'&&'", "'||'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'.'", "':'", "';'", "','", "'>>'", 
                     "'print'", "'this'", "'Class'", "'Inherits'", "'Attributes'", 
                     "'public'", "'private'", "'protected'", "'Methods'", 
                     "'function'", "'returns'", "'return'", "'import'", 
                     "'main'", "'list'", "'read'", "'var'", "'\"'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'float'", "'char'", "'string'", "'bool'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "ELSE_IF", "DO", "TIMES", 
                      "WHILE", "INCREMENT_OPERATOR", "DECREMENT_OPERATOR", 
                      "MULTIPLICATION_OPERATOR", "DIVISION_OPERATOR", "MODULUS_OPERATOR", 
                      "POWER_OPERATOR", "EQUAL_OPERATOR", "ASSIGNMENT", 
                      "SUM_OPERATOR", "SUBSTRACTION_OPERATOR", "NOT_EQUAL_OPERATOR", 
                      "GREATER_THAN_OPERATOR", "GREATER_OR_EQUAL_THAN_OPERATOR", 
                      "LESS_THAN_OPERATOR", "LESS_THAN_OR_EQUAL_OPERATOR", 
                      "LOGICAL_AND_OPERATOR", "LOGICAL_OR_OPERATOR", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
                      "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET", "DOT", 
                      "COLON", "SEMICOLON", "COMMA", "INPUT_STREAM", "PRINT", 
                      "THIS", "CLASS", "INHERITS", "ATTRIBUTES", "PUBLIC", 
                      "PRIVATE", "PROTECTED", "METHODS", "FUNCTION", "RETURNS", 
                      "RETURN", "IMPORT", "MAIN", "LIST", "READ", "VAR", 
                      "SINGLE_QUOTES", "TYPE_INT", "TYPE_FLOAT", "TYPE_CHAR", 
                      "TYPE_STRING", "TYPE_BOOL", "INT", "FLOAT", "CHAR", 
                      "STRING", "BOOL", "CLASSNAME", "ID", "WHITESPACE" ]

    RULE_inicio = 0
    RULE_main = 1
    RULE_clase = 2
    RULE_imports = 3
    RULE_class_declaration = 4
    RULE_main_header = 5
    RULE_bloque = 6
    RULE_preEstatuto = 7
    RULE_claseAux = 8
    RULE_bloqueClase = 9
    RULE_constructor = 10
    RULE_constructorAux = 11
    RULE_constructorAux2 = 12
    RULE_atributos = 13
    RULE_atributosPublic = 14
    RULE_atributosPublicAux = 15
    RULE_atributosPrivate = 16
    RULE_atributosPrivateAux = 17
    RULE_atributosProtected = 18
    RULE_metodos = 19
    RULE_metodosPublicos = 20
    RULE_metodosPublicosAux = 21
    RULE_metodosPrivados = 22
    RULE_metodosPrivadosAux = 23
    RULE_func = 24
    RULE_funcAux = 25
    RULE_argumentosDecl = 26
    RULE_argumentosDeclAux = 27
    RULE_impConstructores = 28
    RULE_impConstructor = 29
    RULE_emptyRule = 30
    RULE_impFunc = 31
    RULE_impFuncAux2 = 32
    RULE_argumentos = 33
    RULE_argumentosAux = 34
    RULE_bloqueConstructor = 35
    RULE_bloqueFunc = 36
    RULE_bloqueFuncAux = 37
    RULE_bloqueFuncAux2 = 38
    RULE_preVars = 39
    RULE_vars_ = 40
    RULE_varsAux = 41
    RULE_varsRepeated = 42
    RULE_tipo_dato = 43
    RULE_tipo_dato_list = 44
    RULE_dim = 45
    RULE_dimMatrix = 46
    RULE_tipo_dato_no_list = 47
    RULE_tipo = 48
    RULE_estatuto = 49
    RULE_asignacion = 50
    RULE_condicion = 51
    RULE_endIf = 52
    RULE_exitIfExpresion = 53
    RULE_condicionAux = 54
    RULE_condicionChoice = 55
    RULE_enterElse = 56
    RULE_escritura = 57
    RULE_escrituraAux = 58
    RULE_ciclos = 59
    RULE_afterDo = 60
    RULE_afterCondition = 61
    RULE_afterDoLoop = 62
    RULE_afterWhile = 63
    RULE_afterWhileExpression = 64
    RULE_exitWhile = 65
    RULE_doAux = 66
    RULE_llamadaFunc = 67
    RULE_argumentosLlamada = 68
    RULE_addArgument = 69
    RULE_verifyArgument = 70
    RULE_argumentosLlamadaAux = 71
    RULE_lectura = 72
    RULE_lecturaAux = 73
    RULE_decInc = 74
    RULE_decIncAux = 75
    RULE_objeto = 76
    RULE_objetoAux = 77
    RULE_megaExpresion = 78
    RULE_megaExpresionAux = 79
    RULE_superExpresion = 80
    RULE_superExpresionOperadores = 81
    RULE_expresion = 82
    RULE_expresionOperadores = 83
    RULE_termino = 84
    RULE_terminoOperadores = 85
    RULE_factor = 86
    RULE_factorParentesis = 87
    RULE_varCte = 88
    RULE_matrix = 89

    ruleNames =  [ "inicio", "main", "clase", "imports", "class_declaration", 
                   "main_header", "bloque", "preEstatuto", "claseAux", "bloqueClase", 
                   "constructor", "constructorAux", "constructorAux2", "atributos", 
                   "atributosPublic", "atributosPublicAux", "atributosPrivate", 
                   "atributosPrivateAux", "atributosProtected", "metodos", 
                   "metodosPublicos", "metodosPublicosAux", "metodosPrivados", 
                   "metodosPrivadosAux", "func", "funcAux", "argumentosDecl", 
                   "argumentosDeclAux", "impConstructores", "impConstructor", 
                   "emptyRule", "impFunc", "impFuncAux2", "argumentos", 
                   "argumentosAux", "bloqueConstructor", "bloqueFunc", "bloqueFuncAux", 
                   "bloqueFuncAux2", "preVars", "vars_", "varsAux", "varsRepeated", 
                   "tipo_dato", "tipo_dato_list", "dim", "dimMatrix", "tipo_dato_no_list", 
                   "tipo", "estatuto", "asignacion", "condicion", "endIf", 
                   "exitIfExpresion", "condicionAux", "condicionChoice", 
                   "enterElse", "escritura", "escrituraAux", "ciclos", "afterDo", 
                   "afterCondition", "afterDoLoop", "afterWhile", "afterWhileExpression", 
                   "exitWhile", "doAux", "llamadaFunc", "argumentosLlamada", 
                   "addArgument", "verifyArgument", "argumentosLlamadaAux", 
                   "lectura", "lecturaAux", "decInc", "decIncAux", "objeto", 
                   "objetoAux", "megaExpresion", "megaExpresionAux", "superExpresion", 
                   "superExpresionOperadores", "expresion", "expresionOperadores", 
                   "termino", "terminoOperadores", "factor", "factorParentesis", 
                   "varCte", "matrix" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    ELSE_IF=3
    DO=4
    TIMES=5
    WHILE=6
    INCREMENT_OPERATOR=7
    DECREMENT_OPERATOR=8
    MULTIPLICATION_OPERATOR=9
    DIVISION_OPERATOR=10
    MODULUS_OPERATOR=11
    POWER_OPERATOR=12
    EQUAL_OPERATOR=13
    ASSIGNMENT=14
    SUM_OPERATOR=15
    SUBSTRACTION_OPERATOR=16
    NOT_EQUAL_OPERATOR=17
    GREATER_THAN_OPERATOR=18
    GREATER_OR_EQUAL_THAN_OPERATOR=19
    LESS_THAN_OPERATOR=20
    LESS_THAN_OR_EQUAL_OPERATOR=21
    LOGICAL_AND_OPERATOR=22
    LOGICAL_OR_OPERATOR=23
    LEFT_PARENTHESIS=24
    RIGHT_PARENTHESIS=25
    LEFT_SQUARE_BRACKET=26
    RIGHT_SQUARE_BRACKET=27
    LEFT_CURLY_BRACKET=28
    RIGHT_CURLY_BRACKET=29
    DOT=30
    COLON=31
    SEMICOLON=32
    COMMA=33
    INPUT_STREAM=34
    PRINT=35
    THIS=36
    CLASS=37
    INHERITS=38
    ATTRIBUTES=39
    PUBLIC=40
    PRIVATE=41
    PROTECTED=42
    METHODS=43
    FUNCTION=44
    RETURNS=45
    RETURN=46
    IMPORT=47
    MAIN=48
    LIST=49
    READ=50
    VAR=51
    SINGLE_QUOTES=52
    TYPE_INT=53
    TYPE_FLOAT=54
    TYPE_CHAR=55
    TYPE_STRING=56
    TYPE_BOOL=57
    INT=58
    FLOAT=59
    CHAR=60
    STRING=61
    BOOL=62
    CLASSNAME=63
    ID=64
    WHITESPACE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class InicioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clase(self):
            return self.getTypedRuleContext(Objective_JSParser.ClaseContext,0)


        def main(self):
            return self.getTypedRuleContext(Objective_JSParser.MainContext,0)


        def getRuleIndex(self):
            return Objective_JSParser.RULE_inicio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInicio" ):
                listener.enterInicio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInicio" ):
                listener.exitInicio(self)




    def inicio(self):

        localctx = Objective_JSParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.clase()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.main()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def imports(self):
            return self.getTypedRuleContext(Objective_JSParser.ImportsContext,0)


        def class_declaration(self):
            return self.getTypedRuleContext(Objective_JSParser.Class_declarationContext,0)


        def getRuleIndex(self):
            return Objective_JSParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = Objective_JSParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.imports()
            self.state = 185
            self.class_declaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClaseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(Objective_JSParser.CLASS, 0)

        def CLASSNAME(self):
            return self.getToken(Objective_JSParser.CLASSNAME, 0)

        def claseAux(self):
            return self.getTypedRuleContext(Objective_JSParser.ClaseAuxContext,0)


        def bloqueClase(self):
            return self.getTypedRuleContext(Objective_JSParser.BloqueClaseContext,0)


        def getRuleIndex(self):
            return Objective_JSParser.RULE_clase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClase" ):
                listener.enterClase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClase" ):
                listener.exitClase(self)




    def clase(self):

        localctx = Objective_JSParser.ClaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_clase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(Objective_JSParser.CLASS)
            self.state = 188
            self.match(Objective_JSParser.CLASSNAME)
            self.state = 189
            self.claseAux()
            self.state = 190
            self.bloqueClase()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(Objective_JSParser.IMPORT, 0)

        def ID(self):
            return self.getToken(Objective_JSParser.ID, 0)

        def imports(self):
            return self.getTypedRuleContext(Objective_JSParser.ImportsContext,0)


        def getRuleIndex(self):
            return Objective_JSParser.RULE_imports

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImports" ):
                listener.enterImports(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImports" ):
                listener.exitImports(self)




    def imports(self):

        localctx = Objective_JSParser.ImportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_imports)
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Objective_JSParser.IMPORT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.match(Objective_JSParser.IMPORT)
                self.state = 193
                self.match(Objective_JSParser.ID)
                self.state = 194
                self.imports()
                pass
            elif token in [Objective_JSParser.CLASS]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(Objective_JSParser.CLASS, 0)

        def CLASSNAME(self):
            return self.getToken(Objective_JSParser.CLASSNAME, 0)

        def LEFT_CURLY_BRACKET(self):
            return self.getToken(Objective_JSParser.LEFT_CURLY_BRACKET, 0)

        def preVars(self):
            return self.getTypedRuleContext(Objective_JSParser.PreVarsContext,0)


        def impFunc(self):
            return self.getTypedRuleContext(Objective_JSParser.ImpFuncContext,0)


        def main_header(self):
            return self.getTypedRuleContext(Objective_JSParser.Main_headerContext,0)


        def LEFT_PARENTHESIS(self):
            return self.getToken(Objective_JSParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(Objective_JSParser.RIGHT_PARENTHESIS, 0)

        def bloque(self):
            return self.getTypedRuleContext(Objective_JSParser.BloqueContext,0)


        def RIGHT_CURLY_BRACKET(self):
            return self.getToken(Objective_JSParser.RIGHT_CURLY_BRACKET, 0)

        def getRuleIndex(self):
            return Objective_JSParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)




    def class_declaration(self):

        localctx = Objective_JSParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(Objective_JSParser.CLASS)
            self.state = 199
            self.match(Objective_JSParser.CLASSNAME)
            self.state = 200
            self.match(Objective_JSParser.LEFT_CURLY_BRACKET)
            self.state = 201
            self.preVars()
            self.state = 202
            self.impFunc()
            self.state = 203
            self.main_header()
            self.state = 204
            self.match(Objective_JSParser.LEFT_PARENTHESIS)
            self.state = 205
            self.match(Objective_JSParser.RIGHT_PARENTHESIS)
            self.state = 206
            self.bloque()
            self.state = 207
            self.match(Objective_JSParser.RIGHT_CURLY_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Main_headerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(Objective_JSParser.MAIN, 0)

        def getRuleIndex(self):
            return Objective_JSParser.RULE_main_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_header" ):
                listener.enterMain_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_header" ):
                listener.exitMain_header(self)




    def main_header(self):

        localctx = Objective_JSParser.Main_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_main_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.match(Objective_JSParser.MAIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_CURLY_BRACKET(self):
            return self.getToken(Objective_JSParser.LEFT_CURLY_BRACKET, 0)

        def preEstatuto(self):
            return self.getTypedRuleContext(Objective_JSParser.PreEstatutoContext,0)


        def RIGHT_CURLY_BRACKET(self):
            return self.getToken(Objective_JSParser.RIGHT_CURLY_BRACKET, 0)

        def getRuleIndex(self):
            return Objective_JSParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = Objective_JSParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.match(Objective_JSParser.LEFT_CURLY_BRACKET)
            self.state = 212
            self.preEstatuto()
            self.state = 213
            self.match(Objective_JSParser.RIGHT_CURLY_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PreEstatutoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(Objective_JSParser.EstatutoContext,0)


        def preEstatuto(self):
            return self.getTypedRuleContext(Objective_JSParser.PreEstatutoContext,0)


        def getRuleIndex(self):
            return Objective_JSParser.RULE_preEstatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreEstatuto" ):
                listener.enterPreEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreEstatuto" ):
                listener.exitPreEstatuto(self)




    def preEstatuto(self):

        localctx = Objective_JSParser.PreEstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_preEstatuto)
        try:
            self.state = 219
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Objective_JSParser.IF, Objective_JSParser.DO, Objective_JSParser.WHILE, Objective_JSParser.PRINT, Objective_JSParser.THIS, Objective_JSParser.READ, Objective_JSParser.VAR, Objective_JSParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 215
                self.estatuto()
                self.state = 216
                self.preEstatuto()
                pass
            elif token in [Objective_JSParser.RIGHT_CURLY_BRACKET]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)
